--- a/src/react_component/to_do-react/style.css
+++ b/src/react_component/to_do-react/style.css
@@ -13,7 +13,7 @@ html {
 
 .main-div {
 	min-height: 100vh;
-	background: #060822;
+	background: darkred;
 	display: flex;
 	justify-content: center;
 	/* align-items: center; */
@@ -72,6 +72,9 @@ input:focus {
 	-webkit-box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.2);
 	box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.2);
 }
+
+/*  Please Subscribe to ThapaTechnical Youtube Channel
+/* Click Here: https://www.youtube.com/thapatechnical  */
 
 .todo-btn {
 	width: 5rem;
@@ -149,9 +152,6 @@ input:focus {
 .fa-edit {
 	margin-left: -3.5rem;
 }
-
-/*  Please Subscribe to ThapaTechnical Youtube Channel
-/* Click Here: https://www.youtube.com/thapatechnical  */
 
 .eachItem:hover .fa-trash-alt {
 	color: rgb(214, 47, 61);
